<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PoopCompanion">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_tiny_button"
            android:id="@+id/btnTiny"
            android:layout_weight="1"
            android:onClick="getTinyStory" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_short_button"
            android:id="@+id/btnShort"
            android:layout_weight="1"
            android:onClick="getShortStory" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_medium_button"
            android:id="@+id/btnMedium"
            android:layout_weight="1"
            android:onClick="getMediumStory" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_long_button"
            android:id="@+id/btnLong"
            android:layout_weight="1"
            android:onClick="getLongStory" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/textLinearLayout"
        android:layout_below="@+id/linearLayout">
    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/getting_started"
            android:id="@+id/textView"
            android:freezesText="true"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1.0"/>
    </ScrollView>
    </LinearLayout>

</RelativeLayout>
